2011-02-22  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #12855: Generate preview link visible in Live-Workspace and on non-content pages

2011-02-21  Marco Bresch <typo3@starfinanz.de>

	* Fixed bug #13074: missing cache_frontend configuration

2011-02-20  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #13098:Hide sys_workspace_stage in list view (Thanks to Andreas Kiessling)

2011-02-20  Steffen Kamper  <steffen@typo3.org>

	* Changes according to changed ExtDirect inclusion (#17592)

2011-02-17  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #12621: Documentation for new options concerning stageNotificationEmail
	* Fixed bug #12693: Naming of Documentation folder

2011-02-16  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #13003: singleIndex rows not showing up due to browser security violations
	* Fixed bug #13002: singleIndex page much have invalid workspace id

2011-01-26  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #3523: Rewrite of workspace manual started

2011-01-26  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Raised version to 4.5.0

2011-01-26  Marco Bresch  <typo3@starfinanz.de>

	* Fixed bug #12534: Positioning of toolbar in IE6 (Thanks to Markus Antecki)

2011-01-25  Sonja Scholz  <ss@cabag.ch>

	* Fixed bug #10636: workspace module not usable in IE6 (Thanks to Markus Antecki)

2011-01-25  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Raised version to 4.5.0rc2
	* Fixed bug #12406: Not possible to publish change of IRRE ordering
	* Fixed bug #12464: Slider element is not always visible during the dragging process..

2011-01-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17222: fitToParent calculates wrong height - workspace grid needs 40 pixel offset for render the legend

2011-01-21  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Followup to #11539: Split view / initial height calculated right
	* Followup to #11539: Split view / tooltip styling added

2011-01-21  Tolleiv Nietsch  <typo3@tolleiv.de>
